# GBA-raycaster

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  benchmark.cpp  benchmark.sh  commands.cmake  dbgmenu.cpp  ent.cpp  forest.tmj  game.hpp  game_structs.hpp  main.cpp  raycast.cpp
assets/: db16.pal  forest.pal
doc/: OPTIMIZE.md  RENDERER.md  content-guidelines.rst  debug-menu.rst  scalers.rst  systems.rst
kernels/: scalers_2col.cpp
mgba/: mgba.c
pregenerated/: crossbow.c  crossbow.h
tools/: README.md  jasc-generate-swatch.py  jasc-to-gba-palette.py  make-luts.py  make-scalers.py  sprite-compiler.py  texture-compiler.py  tiled-to-h.py  util.py
tools/ci/: build_stats.html  present_build_stats.py  save_build_stats.py
